--- a/content/03.results.md
+++ b/content/03.results.md
@@ -41,18 +41,18 @@ In order to demonstrate the utility of Metaboverse to the community, we used Met
 #### Vignette 1. Perturbation of mitochondrial fatty acid synthesis across time
 Mitochondrial fatty acid synthesis (mtFAS), an evolutionarily conserved pathway, has long been recognized to produce lipoic acid, a critical cofactor for several metabolic enzymes. Recent work has begun to uncover additional, important roles for this pathway. For example, we now know that mtFAS coordinates fatty acid synthesis with iron-sulfur (Fe-S) cluster biogenesis and assembly of oxidative phosphorylation complexes, and more [@doi:10.1016/j.cub.2018.08.022; @doi:10.1016/j.molcel.2018.06.039; @doi:10.7554/eLife.17828]. Additionally, this pathway has received increased physiological focus with the discovery of patients with mutations in key mtFAS enzymes [@doi:10.1016/j.ajhg.2016.09.021].
 
-The <i>Saccharomyces cerevisiae</i> Mct1 protein is an acyltransferase responsible for the transfer of a malonyl group from malonyl-CoA to the mitochondrial acyl carrier protein (ACP). By knocking out this gene, the activity of the mtFAS pathway is abolished. In order to probe the relationship between mtFAS-related protein concentration and the effects of its perturbation on downstream metabolic processes from a systematic perspective, we used an <i>mct1</i>&Delta; mutant <i>S. cerevisiae</i> strain. We previously performed steady-state comparative proteomics in this <i>mct1</i>&Delta; yeast model 12 hours after shifting to a non-fermentable carbon source [@doi:10.1016/j.molcel.2018.06.039]. In order to demonstrate the potential of Metaboverse and build upon these previous studies, we also performed RNA-sequencing of transcript levels at 0, 3, and 12 hours after a shift to a non-fermentable carbon source, as well as steady-state metabolomics at 0, 15, 30, 60, and 180 minutes after the shift in carbon source. By layering these data onto the <i>S. cerevisiae</i> metabolic network using Metaboverse, we observed interesting respiratory signatures as expected based on previous work [@doi:10.1111/mmi.12402; @doi:10.1016/j.molcel.2018.06.039]. For example, we noticed a strong pattern in the electron transfer from ubiquinol to cytochrome C via complex III of the electron transport chain (ETC) (Figure @fig:mct1_vignette A). At the proteomics level, cytochrome C isoforms, CYC1 and CYC7 are both significantly reduced in concentration compared to wild-type cells (log<sub>2</sub>(fold change): -1.57 & -0.88; p-value: < 0.01 & < 0.01; Cohen's d: -7.99 & -3.94; respectively). This reduction in cytochrome C concentration is paired with a marked reduction in the concentration of the protein components of Complex III, which is the catalyst of the ubiquinol to cytochrome C electron transfer reaction (average log<sub>2</sub>(fold change) of all measured protein components = -2.03, where 9/11 component proteins were measured; 7/11 passed statistical significance thresholds of BH-corrected p-value <= 0.05. Range of significant log<sub>2</sub>(fold change) values: -0.34 to -3.21).  
+The <i>Saccharomyces cerevisiae</i> Mct1 protein is an acyltransferase responsible for the transfer of a malonyl group from malonyl-CoA to the mitochondrial acyl carrier protein (ACP). By knocking out this gene, the activity of the mtFAS pathway is abolished. In order to probe the relationship between mtFAS-related protein concentration and the effects of its perturbation on downstream metabolic processes from a systematic perspective, we used an <i>mct1</i>&Delta; mutant <i>S. cerevisiae</i> strain. We previously performed steady-state comparative proteomics in this <i>mct1</i>&Delta; yeast model 12 hours after shifting to a non-fermentable carbon source [@doi:10.1016/j.molcel.2018.06.039]. In order to demonstrate the potential of Metaboverse and build upon these previous studies, we also performed RNA-sequencing of transcript levels at 0, 3, and 12 hours after a shift to a non-fermentable carbon source, as well as steady-state metabolomics at 0, 15, 30, 60, and 180 minutes after the shift in carbon source. By layering these data onto the <i>S. cerevisiae</i> metabolic network using Metaboverse, we observed interesting respiratory signatures as expected based on previous work [@doi:10.1111/mmi.12402; @doi:10.1016/j.molcel.2018.06.039]. For example, we noticed a strong pattern in the electron transfer from ubiquinol to cytochrome C via complex III of the electron transport chain (ETC) (Figure @fig:mct1_vignette A). At the proteomics level, cytochrome C isoforms, CYC1 and CYC7 are both significantly reduced in concentration compared to wild-type cells (log<sub>2</sub>(fold change): -1.57 & -0.88; adjusted p-value: 1.21E-03 & 5.84E-03; Cohen's d: -7.99 & -3.94; respectively). This reduction in cytochrome C concentration is paired with a marked reduction in the concentration of the protein components of Complex III, which is the catalyst of the ubiquinol to cytochrome C electron transfer reaction (average log<sub>2</sub>(fold change) of all measured protein components = -2.03, where 9/11 component proteins were measured; 8/11 passed statistical significance thresholds of BH-corrected p-value <= 0.05. Range of significant log<sub>2</sub>(fold change) values: -0.34 to -3.21).  
 
-The second pattern of interest that was expected was the marked reduction of TCA cycle-related enzymes. Motif analysis within the TCA cycle identified several putative regulatory hotspots between metabolites and metabolite-protein interactions throughout the steps of the TCA cycle (Figure @fig:mct1_vignette B). However, visualizing these motifs and data across the timecourse reveals interesting patterns. For the following metabolite values, we will provide those for the 15-minute time point because the statistical strength for the discussed metabolites is strongest at this time. For example, citrate levels decrease across the metabolomics timecourse (at 15 min; log<sub>2</sub>FC: -0.-1.75, adjusted-p: 0.01; Cohen's d: -1.86), which is coincident with reduced steady-state levels of Ctp1 (log<sub>2</sub>FC: -0.64, adjusted-p: 0.03; Cohen's d: -4.73), a protein that catalyzes the transfer of citrate from the mitochondrial matrix to the cytosol [@doi:10.1074/jbc.270.8.4108]. Citrate is a key metabolite and the first step in the TCA cycle. We hypothesize that due to central carbon metabolite reductions, Ctp1 may be down-regulated in response to the decrease in citrate in order to maintain citrate concentrations within the mitochondria where it is perhaps most physiologically important in an acute respiratory metabolism context.
+The second pattern of interest that was expected was the marked reduction of TCA cycle-related enzymes. Motif analysis within the TCA cycle identified several putative regulatory hotspots between metabolites and metabolite-protein interactions throughout the steps of the TCA cycle (Figure @fig:mct1_vignette B). However, visualizing these motifs and data across the timecourse reveals interesting patterns. For the following metabolite values, we will provide those for the 15-minute time point because the statistical strength for the discussed metabolites is strongest at this time. For example, citrate levels decrease across the metabolomics timecourse (at 15 min; log<sub>2</sub>FC: -1.75, adjusted-p: 6.61E-03; Cohen's d: -1.86), which is coincident with reduced steady-state levels of Ctp1 (log<sub>2</sub>FC: -0.64, adjusted-p: 6.06E-03; Cohen's d: -4.73), a protein that catalyzes the transfer of citrate from the mitochondrial matrix to the cytosol [@doi:10.1074/jbc.270.8.4108]. Citrate is a key metabolite and the first step in the TCA cycle. We hypothesize that due to central carbon metabolite reductions, Ctp1 may be down-regulated in response to the decrease in citrate in order to maintain citrate concentrations within the mitochondria where it is perhaps most physiologically important in an acute respiratory metabolism context.
 
-Another point of interest is the up-regulation of Dic1 (log<sub>2</sub>FC: 2.15, adjusted-p: < 0.01; Cohen's d: 28.97), which catalyzes the exchange of dicarboxylates like malate (at 15 min; log<sub>2</sub>FC: 2.61, adjusted-p: < 0.01; Cohen's d: 5.12) between the mitochondrial matrix and cytosol [@doi:10.1046/j.1365-2958.1999.01197.x]. Interestingly, Dic1 is essential for growth in non-fermentable carbon source media. When yeast, especially those with deficits in flux into the TCA cycle due to loss of Mct1, are switched to a non-fermentable carbon, as was done in this experiment, they might adapt by up-regulating Dic1, as we see in this situation.
+Another point of interest is the up-regulation of Dic1 (log<sub>2</sub>FC: 2.15, adjusted-p: 5.95E-06; Cohen's d: 28.97), which catalyzes the exchange of dicarboxylates like malate (at 15 min; log<sub>2</sub>FC: 2.61, adjusted-p: 3.23E-06; Cohen's d: 5.12) between the mitochondrial matrix and cytosol [@doi:10.1046/j.1365-2958.1999.01197.x]. Interestingly, Dic1 is essential for growth in non-fermentable carbon source media. When yeast, especially those with deficits in flux into the TCA cycle due to loss of Mct1, are switched to a non-fermentable carbon, as was done in this experiment, they might adapt by up-regulating Dic1, as we see in this situation.
 
 ![
   **Metaboverse identifies several reaction motifs of interest in <i>mct1</i>&Delta; cells.**
   (A) Steady-state proteomics (12 hours) overlaid on the reaction, "Electron transfer from ubiquinol to cytochrome c of complex III". (B) Steady-state proteomics (12 hours) and metabolomics at 15 minutes overlaid on TCA-related reactions. Appropriate time stamps for the data type are displayed in the upper-right hand corner of each subplot. Metabolomics and proteomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<2> Fold Changes and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with purple border indicates a motif was found at this reaction for the given data type time points. Non-reaction circles indicate metabolites and squares indicate proteins or protein complexes. Gray edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst. Dashed blue edges point from a metabolite component to the complex it is involved in. Dashed orange edges point from a protein component to the complex it is involved in. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements. The shading in sub-plot A demonstrates Metaboverse's ability to show compartmentalization, whereas sub-plot B has compartmentalization shading turned off.
 ](./content/figures/fig_mct1.png "Square image"){#fig:mct1_vignette}
 
-We also see that although the enzymes in the TCA cycle are all reduced in concentration, several related metabolites are up-regulated across multiple time points in the dataset. It is possible, for example, that the increased fumarate levels (at 15 min; log<sub>2</sub>FC: 1.00, adjusted-p: < 0.01; Cohen's d: 3.89) are related to the reduction in active fumarate hydratase (FH tetramer, FUM1; log<sub>2</sub>FC: -1.39, adjusted-p: 0.03; Cohen's d: -4.91), as has been demonstrated previously and shown to associate with hereditary leiomyomatosis and renal cell cancer in humans [@doi:10.1038/nature19353]. These patterns would be an interesting point of further study to understand the adaptations these cells make to disruptions to the TCA cycle and their consequences.
+We also see that although the enzymes in the TCA cycle are all reduced in concentration, several related metabolites are up-regulated across multiple time points in the dataset. It is possible, for example, that the increased fumarate levels (at 15 min; log<sub>2</sub>FC: 1.00, adjusted-p: < 0.01; Cohen's d: 3.89) are related to the reduction in active fumarate hydratase (FH tetramer, FUM1; log<sub>2</sub>FC: -1.39, adjusted-p: < 0.01; Cohen's d: -4.91), as has been demonstrated previously and shown to associate with hereditary leiomyomatosis and renal cell cancer in humans [@doi:10.1038/nature19353]. These patterns would be an interesting point of further study to understand the adaptations these cells make to disruptions to the TCA cycle and their consequences.
 
 By analyzing this multi-omics dataset using reaction motif analysis and other interactive visualization, interesting questions arise. We see several reaction motifs that are expected based on prior knowledge of this biological model, as well as other interesting behaviors worthy of further follow-up. These identified patterns demonstrate the potential Metaboverse has to act as a valuable hypothesis-generation tool, particularly with multi-omics and timecourse datasets, as well as a convenient platform for visualization and analysis of a user's dataset in the context of the metabolic or other reaction networks.
 
